[package]
name = "zr_app"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.2"
zr_app_macros = { path = "zr_app_macros", optional = true }

[features]
default = []
macros = ["dep:zr_app_macros"]

[workspace]
members = ["zr_app_macros"]
